--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
           <h2 class="secondtitle visually-hidden">What Are We Doing</h2>
           <ul class="list">
             <li class="second-section-list">
+              <!--Primul element al listei conține un <div> care servește ca container pentru iconiță-->
+
+              <div class="second-section-icons"></div>
               <h3 class="title-second-section">Strategy</h3>
               <p class="paragraph-second-section">
                 Our goal is to identify the business problem to walk away with
@@ -112,6 +115,11 @@
               </p>
             </li>
             <li class="second-section-list">
+              <div class="second-section-icons">
+                <svg width="64" height="64">
+                  <use href="./images/antenna 1.svg#antenna1-simbol"></use>
+                </svg>
+              </div>
               <h3 class="title-second-section">Punctuality</h3>
               <p class="paragraph-second-section">
                 Bring the key message to the brand's audience for the best price
@@ -119,6 +127,13 @@
               </p>
             </li>
             <li class="second-section-list">
+              <div class="second-section-icons">
+                <svg>
+                  <use
+                    href="./cale-către-svg-sprite/nume-sprite.svg#identificator-simbol"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="title-second-section">Diligence</h3>
               <p class="paragraph-second-section">
                 Research and confirm brands that present the strongest digital
@@ -126,6 +141,13 @@
               </p>
             </li>
             <li class="second-section-list">
+              <div class="second-section-icons">
+                <svg>
+                  <use
+                    href="./cale-către-svg-sprite/nume-sprite.svg#identificator-simbol"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="title-second-section">Technologies</h3>
               <p class="paragraph-second-section">
                 Design practice focused on digital experiences. We bring forth a
@@ -215,7 +237,7 @@
     <!--Footer Section-->
 
     <footer class="ftr">
-      <div class="container">
+      <div class="container-footer">
         <a href="./index.html" class="lgo link"
           >Web<span class="span-footer">Studio</span></a
         >
@@ -223,6 +245,13 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+
+      <div class="container-social-media">
+        <p class="socialmedia">Social Media</p>
+        <ul class="socialmedia-list">
+          <li class="socialmedia-list-two"></li>
+        </ul>
       </div>
     </footer>
   </body>
