--- a/index.html
+++ b/index.html
@@ -196,6 +196,14 @@
               <div class="container-forth">
                 <h3 class="title-second-section">Mark Guerrero</h3>
                 <p class="paragraph-second-section">Product Designer</p>
+
+                <!--Retelele sociale-->
+
+                <ul class="index">
+                  <li class="index-media">
+                    <a href="" class="medialinks"></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="background-special">
@@ -228,6 +236,19 @@
                 <h3 class="title-second-section">Daniel Wilson</h3>
                 <p class="paragraph-second-section">UI Designer</p>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!--CUSTOMER SECTION-->
+
+      <section class="customer-section">
+        <div class="container">
+          <h2 class="title-customers">Customers</h2>
+          <ul class="list-customers">
+            <li class="list-item-customers">
+              <a href="" class="customers-links"></a>
             </li>
           </ul>
         </div>
