--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <header class="header">
       <div class="cls container">
         <nav class="nav-header">
-          <a href="./index.html" class="logo link"
+          <a href="./index.html" class="logo webstudio"
             >Web<span class="span-header">Studio</span></a
           >
           <ul class="list nav-meniu">
@@ -259,10 +259,10 @@
 
     <footer class="ftr">
       <div class="container-footer">
-        <a href="./index.html" class="lgo link"
+        <a href="./index.html" class="lgo sec"
           >Web<span class="span-footer">Studio</span></a
         >
-        <p class="logo-link">
+        <p class="logo-footer-link">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
