--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
             <li class="second-section-list">
               <!--Primul element al listei conține un <div> care servește ca container pentru iconiță-->
 
-              <div class="second-section-icons"></div>
+              <div class="second-section-icons">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#antenna1-simbol"></use>
+                </svg>
+              </div>
               <h3 class="title-second-section">Strategy</h3>
               <p class="paragraph-second-section">
                 Our goal is to identify the business problem to walk away with
@@ -117,7 +121,7 @@
             <li class="second-section-list">
               <div class="second-section-icons">
                 <svg width="64" height="64">
-                  <use href="./images/antenna 1.svg#antenna1-simbol"></use>
+                  <use href="./images/icons.svg#antenna1-simbol"></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Punctuality</h3>
@@ -129,9 +133,7 @@
             <li class="second-section-list">
               <div class="second-section-icons">
                 <svg>
-                  <use
-                    href="./cale-către-svg-sprite/nume-sprite.svg#identificator-simbol"
-                  ></use>
+                  <use href="./images/icons.svg#Client 5-simbol"></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Diligence</h3>
@@ -275,5 +277,8 @@
         </ul>
       </div>
     </footer>
+
+   
+    </svg>
   </body>
 </html>
