--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </li>
             <li class="second-section-list">
               <div class="second-section-icons">
-                <svg>
+                <svg width="64" height="64">
                   <use href="./images/icons.svg#Client 5-simbol"></use>
                 </svg>
               </div>
@@ -144,10 +144,8 @@
             </li>
             <li class="second-section-list">
               <div class="second-section-icons">
-                <svg>
-                  <use
-                    href="./cale-către-svg-sprite/nume-sprite.svg#identificator-simbol"
-                  ></use>
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#antenna1-simbol"></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Technologies</h3>
@@ -203,7 +201,32 @@
 
                 <ul class="index">
                   <li class="index-media">
-                    <a href="" class="medialinks"></a>
+                    <a href="" class="medialinks">
+                      <svg class="medialinks-class" width="16" height="16">
+                        <use href="./images/icons.svg#antenna1-simbol"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="index-media">
+                    <a href="" class="medialinks">
+                      <svg class="medialinks-class" width="16" height="16">
+                        <use href="./images/icons.svg#antenna1-simbol"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="index-media">
+                    <a href="" class="medialinks">
+                      <svg class="medialinks-class" width="16" height="16">
+                        <use href="./images/icons.svg#antenna1-simbol"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="index-media">
+                    <a href="" class="medialinks">
+                      <svg class="medialinks-class" width="16" height="16">
+                        <use href="./images/icons.svg#antenna1-simbol"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -277,8 +300,5 @@
         </ul>
       </div>
     </footer>
-
-   
-    </svg>
   </body>
 </html>
