--- a/portfolio.html
+++ b/portfolio.html
@@ -208,14 +208,21 @@
     <!--Footer section-->
 
     <footer class="ftr">
-      <div class="container">
-        <a href="./index.html" class="lgo link"
+      <div class="container-footer">
+        <a href="./index.html" class="lgo sec"
           >Web<span class="span-footer">Studio</span></a
         >
-        <p class="logo-link">
+        <p class="logo-footer-link">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+
+      <div class="container-social-media">
+        <p class="socialmedia">Social Media</p>
+        <ul class="socialmedia-list">
+          <li class="socialmedia-list-two"></li>
+        </ul>
       </div>
     </footer>
   </body>
