--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <li class="second-section-list">
               <div class="second-section-icons">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#Client 5-simbol"></use>
+                  <use href="./images/icons.svg#Client5-simbol"></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Diligence</h3>
@@ -273,7 +273,49 @@
           <h2 class="title-customers">Customers</h2>
           <ul class="list-customers">
             <li class="list-item-customers">
-              <a href="" class="customers-links"></a>
+              <a href="" class="customers-links">
+                <svg class="medialinks-class" width="104" height="56">
+                  <use href="./images/icons.svg#Logo-simbol"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-item-customers">
+              <a href="" class="customers-links">
+                <svg class="medialinks-class" width="104" height="56">
+                  <use href="./images/icons.svg#antenna1-simbol"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-item-customers">
+              <a href="" class="customers-links">
+                <svg class="medialinks-class" width="104" height="56">
+                  <use href="./images/icons.svg#antenna1-simbol"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="list-item-customers">
+              <a href="" class="customers-links">
+                <svg class="medialinks-class" width="104" height="56">
+                  <use href="./images/icons.svg#antenna1-simbol"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="list-item-customers">
+              <a href="" class="customers-links">
+                <svg class="medialinks-class" width="104" height="56">
+                  <use href="./images/icons.svg#antenna1-simbol"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="list-item-customers">
+              <a href="" class="customers-links">
+                <svg class="medialinks-class" width="104" height="56">
+                  <use href="./images/icons.svg#antenna1-simbol"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
