--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
                 <!--Retelele sociale-->
 
-                <ul class="index">
+                <ul class="social-media">
                   <li class="index-media">
                     <a href="" class="medialinks">
                       <svg class="medialinks-class" width="16" height="16">
@@ -234,6 +234,15 @@
             <li class="background-special">
               <img src="./images/portrait-2.jpg" alt="Tom Ford" width="264" />
               <div class="container-forth">
+                <ul class="social-media">
+                  <li class="index-media">
+                    <a href="" class="medialinks">
+                      <svg class="medialinks-class" width="16" height="16">
+                        <use href="./images/icons.svg#antenna1-simbol"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
                 <h3 class="title-second-section">Tom Ford</h3>
                 <p class="paragraph-second-section">Frontend Developer</p>
               </div>
@@ -246,6 +255,16 @@
                 width="264"
               />
               <div class="container-forth">
+                <ul class="social-media">
+                  <li class="index-media">
+                    <a href="" class="medialinks">
+                      <svg class="medialinks-class" width="16" height="16">
+                        <use href="./images/icons.svg#antenna1-simbol"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+
                 <h3 class="title-second-section">Camila Garcia</h3>
                 <p class="paragraph-second-section">Marketing</p>
               </div>
@@ -258,6 +277,16 @@
                 width="264"
               />
               <div class="container-forth">
+                <ul class="social-media">
+                  <li class="index-media">
+                    <a href="" class="medialinks">
+                      <svg class="medialinks-class" width="16" height="16">
+                        <use href="./images/icons.svg#antenna1-simbol"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+
                 <h3 class="title-second-section">Daniel Wilson</h3>
                 <p class="paragraph-second-section">UI Designer</p>
               </div>
