--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
             </li>
             <li class="second-section-list">
               <div class="second-section-icons">
-                <svg width="64" height="64">
-                  <use href="./images/icons.svg#Client5-simbol"></use>
+                <svg>
+                  <use href="./images/icons.svg#Client 5-simbol"></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Diligence</h3>
@@ -144,8 +144,10 @@
             </li>
             <li class="second-section-list">
               <div class="second-section-icons">
-                <svg width="64" height="64">
-                  <use href="./images/icons.svg#antenna1-simbol"></use>
+                <svg>
+                  <use
+                    href="./cale-către-svg-sprite/nume-sprite.svg#identificator-simbol"
+                  ></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Technologies</h3>
@@ -196,53 +198,11 @@
               <div class="container-forth">
                 <h3 class="title-second-section">Mark Guerrero</h3>
                 <p class="paragraph-second-section">Product Designer</p>
-
-                <!--Retelele sociale-->
-
-                <ul class="social-media">
-                  <li class="index-media">
-                    <a href="" class="medialinks">
-                      <svg class="medialinks-class" width="16" height="16">
-                        <use href="./images/icons.svg#antenna1-simbol"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="index-media">
-                    <a href="" class="medialinks">
-                      <svg class="medialinks-class" width="16" height="16">
-                        <use href="./images/icons.svg#antenna1-simbol"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="index-media">
-                    <a href="" class="medialinks">
-                      <svg class="medialinks-class" width="16" height="16">
-                        <use href="./images/icons.svg#antenna1-simbol"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="index-media">
-                    <a href="" class="medialinks">
-                      <svg class="medialinks-class" width="16" height="16">
-                        <use href="./images/icons.svg#antenna1-simbol"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
               </div>
             </li>
             <li class="background-special">
               <img src="./images/portrait-2.jpg" alt="Tom Ford" width="264" />
               <div class="container-forth">
-                <ul class="social-media">
-                  <li class="index-media">
-                    <a href="" class="medialinks">
-                      <svg class="medialinks-class" width="16" height="16">
-                        <use href="./images/icons.svg#antenna1-simbol"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
                 <h3 class="title-second-section">Tom Ford</h3>
                 <p class="paragraph-second-section">Frontend Developer</p>
               </div>
@@ -255,16 +215,6 @@
                 width="264"
               />
               <div class="container-forth">
-                <ul class="social-media">
-                  <li class="index-media">
-                    <a href="" class="medialinks">
-                      <svg class="medialinks-class" width="16" height="16">
-                        <use href="./images/icons.svg#antenna1-simbol"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-
                 <h3 class="title-second-section">Camila Garcia</h3>
                 <p class="paragraph-second-section">Marketing</p>
               </div>
@@ -277,16 +227,6 @@
                 width="264"
               />
               <div class="container-forth">
-                <ul class="social-media">
-                  <li class="index-media">
-                    <a href="" class="medialinks">
-                      <svg class="medialinks-class" width="16" height="16">
-                        <use href="./images/icons.svg#antenna1-simbol"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-
                 <h3 class="title-second-section">Daniel Wilson</h3>
                 <p class="paragraph-second-section">UI Designer</p>
               </div>
@@ -296,59 +236,6 @@
       </section>
 
       <!--CUSTOMER SECTION-->
-
-      <section class="customer-section">
-        <div class="container">
-          <h2 class="title-customers">Customers</h2>
-          <ul class="list-customers">
-            <li class="list-item-customers">
-              <a href="" class="customers-links">
-                <svg class="medialinks-class" width="104" height="56">
-                  <use href="./images/icons.svg#Logo-simbol"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="list-item-customers">
-              <a href="" class="customers-links">
-                <svg class="medialinks-class" width="104" height="56">
-                  <use href="./images/icons.svg#antenna1-simbol"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="list-item-customers">
-              <a href="" class="customers-links">
-                <svg class="medialinks-class" width="104" height="56">
-                  <use href="./images/icons.svg#antenna1-simbol"></use>
-                </svg>
-              </a>
-            </li>
-
-            <li class="list-item-customers">
-              <a href="" class="customers-links">
-                <svg class="medialinks-class" width="104" height="56">
-                  <use href="./images/icons.svg#antenna1-simbol"></use>
-                </svg>
-              </a>
-            </li>
-
-            <li class="list-item-customers">
-              <a href="" class="customers-links">
-                <svg class="medialinks-class" width="104" height="56">
-                  <use href="./images/icons.svg#antenna1-simbol"></use>
-                </svg>
-              </a>
-            </li>
-
-            <li class="list-item-customers">
-              <a href="" class="customers-links">
-                <svg class="medialinks-class" width="104" height="56">
-                  <use href="./images/icons.svg#antenna1-simbol"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
     </main>
 
     <!--Footer Section-->
@@ -362,13 +249,6 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </div>
-
-      <div class="container-social-media">
-        <p class="socialmedia">Social Media</p>
-        <ul class="socialmedia-list">
-          <li class="socialmedia-list-two"></li>
-        </ul>
       </div>
     </footer>
   </body>
