--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
     />
   </head>
   <body>
+    <!--Hero Section-->
+
     <header class="header">
       <div class="cls container">
         <nav class="nav-header">
-          <a href="./index.html" class="logo webstudio"
+          <a href="./index.html" class="logo link"
             >Web<span class="span-header">Studio</span></a
           >
           <ul class="list nav-meniu">
@@ -82,8 +84,6 @@
       </div>
     </header>
 
-    <!--Hero Section-->
-
     <main>
       <!--First Section-->
 
@@ -109,7 +109,7 @@
 
               <div class="second-section-icons">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#antenna1-simbol"></use>
+                  <use href="./images/icons.svg#antena"></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Strategy</h3>
@@ -121,7 +121,7 @@
             <li class="second-section-list">
               <div class="second-section-icons">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#antenna1-simbol"></use>
+                  <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Punctuality</h3>
@@ -132,8 +132,8 @@
             </li>
             <li class="second-section-list">
               <div class="second-section-icons">
-                <svg>
-                  <use href="./images/icons.svg#Client 5-simbol"></use>
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#diagrama"></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Diligence</h3>
@@ -144,10 +144,8 @@
             </li>
             <li class="second-section-list">
               <div class="second-section-icons">
-                <svg>
-                  <use
-                    href="./cale-către-svg-sprite/nume-sprite.svg#identificator-simbol"
-                  ></use>
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Technologies</h3>
@@ -198,6 +196,9 @@
               <div class="container-forth">
                 <h3 class="title-second-section">Mark Guerrero</h3>
                 <p class="paragraph-second-section">Product Designer</p>
+                <svg width="40" height="40">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
               </div>
             </li>
             <li class="background-special">
@@ -235,20 +236,65 @@
         </div>
       </section>
 
-      <!--CUSTOMER SECTION-->
+      <!--FIVE SECTION ( CUSTOMERS)-->
+
+      <section>
+        <div>
+          <h2 class="subtitle">Customers</h2>
+          <ul class="list-customers">
+            <li class="icons-list">
+              <svg class="icons-list">
+                <use href="./images/icons2.svg#yago"></use>
+              </svg>
+            </li>
+            <li class="icons-list">
+              <svg class="icons-list">
+                <use href="./images/icons2.svg#here"></use>
+              </svg>
+            </li>
+            <li class="icons-list">
+              <svg class="icons-list">
+                <use href="./images/icons2.svg#company"></use>
+              </svg>
+            </li>
+            <li class="icons-list">
+              <svg class="icons-list">
+                <use href="./images/icons2.svg#foster"></use>
+              </svg>
+            </li>
+            <li class="icons-list">
+              <svg class="icons-list">
+                <use href="./images/icons2.svg#brand"></use>
+              </svg>
+            </li>
+            <li class="icons-list">
+              <svg class="icons-list">
+                <use href="./images/icons2.svg#tagline"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <!--Footer Section-->
 
-    <footer class="ftr">
+    <footer class="footer-class">
       <div class="container-footer">
-        <a href="./index.html" class="lgo sec"
+        <a href="./index.html" class="logo-footer"
           >Web<span class="span-footer">Studio</span></a
         >
         <p class="logo-footer-link">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+
+      <div class="social-media">
+        <p class="paragraph-social-media">Social Media</p>
+        <ul>
+          <li></li>
+        </ul>
       </div>
     </footer>
   </body>
