--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
               <div class="second-section-icons">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#antena"></use>
+                  <use href="./images/icons.svg#icon-strategy"></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Strategy</h3>
@@ -121,7 +121,7 @@
             <li class="second-section-list">
               <div class="second-section-icons">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#clock"></use>
+                  <use href="./images/icons.svg#icon-punctuality"></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Punctuality</h3>
@@ -133,7 +133,7 @@
             <li class="second-section-list">
               <div class="second-section-icons">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#diagrama"></use>
+                  <use href="./images/icons.svg#icon-diligence"></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Diligence</h3>
@@ -145,7 +145,7 @@
             <li class="second-section-list">
               <div class="second-section-icons">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#astronaut"></use>
+                  <use href="./images/icons.svg#icon-technologies"></use>
                 </svg>
               </div>
               <h3 class="title-second-section">Technologies</h3>
@@ -195,17 +195,74 @@
               />
               <div class="container-forth">
                 <h3 class="title-second-section">Mark Guerrero</h3>
-                <p class="paragraph-second-section">Product Designer</p>
-                <svg width="40" height="40">
-                  <use href="./images/icons.svg#instagram"></use>
-                </svg>
+                <p class="paragraph-second-section-forth">Product Designer</p>
+                <ul class="forth-social-media">
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="background-special">
               <img src="./images/portrait-2.jpg" alt="Tom Ford" width="264" />
               <div class="container-forth">
                 <h3 class="title-second-section">Tom Ford</h3>
-                <p class="paragraph-second-section">Frontend Developer</p>
+                <p class="paragraph-second-section-forth">Frontend Developer</p>
+                <ul class="forth-social-media">
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -217,7 +274,37 @@
               />
               <div class="container-forth">
                 <h3 class="title-second-section">Camila Garcia</h3>
-                <p class="paragraph-second-section">Marketing</p>
+                <p class="paragraph-second-section-forth">Marketing</p>
+                <ul class="forth-social-media">
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -229,7 +316,37 @@
               />
               <div class="container-forth">
                 <h3 class="title-second-section">Daniel Wilson</h3>
-                <p class="paragraph-second-section">UI Designer</p>
+                <p class="paragraph-second-section-forth">UI Designer</p>
+                <ul class="forth-social-media">
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="forth-icons">
+                    <a href="" class="link-icons">
+                      <svg width="64" height="64">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -244,32 +361,34 @@
           <ul class="list-customers">
             <li class="icons-list">
               <svg class="icons-list">
-                <use href="./images/icons2.svg#yago"></use>
+                <!--icon yago-->
+                <use href="./images/icons.svg#icon-YAGO"></use>
               </svg>
             </li>
             <li class="icons-list">
               <svg class="icons-list">
-                <use href="./images/icons2.svg#here"></use>
+                <!--company tagline here-->
+                <use href="./images/icons.svg#icon-Logo-1"></use>
               </svg>
             </li>
             <li class="icons-list">
               <svg class="icons-list">
-                <use href="./images/icons2.svg#company"></use>
+                <use href="./images/icons.svg#icon-COMPANY"></use>
               </svg>
             </li>
             <li class="icons-list">
               <svg class="icons-list">
-                <use href="./images/icons2.svg#foster"></use>
+                <use href="./images/icons.svg#icon-Logo-3"></use>
               </svg>
             </li>
             <li class="icons-list">
               <svg class="icons-list">
-                <use href="./images/icons2.svg#brand"></use>
+                <use href="./images/icons.svg#icon-BRAND"></use>
               </svg>
             </li>
             <li class="icons-list">
               <svg class="icons-list">
-                <use href="./images/icons2.svg#tagline"></use>
+                <use href="./images/icons.svg#icon-Logo-4"></use>
               </svg>
             </li>
           </ul>
@@ -288,13 +407,6 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </div>
-
-      <div class="social-media">
-        <p class="paragraph-social-media">Social Media</p>
-        <ul>
-          <li></li>
-        </ul>
       </div>
     </footer>
   </body>
