--- a/index.html
+++ b/index.html
@@ -355,41 +355,55 @@
 
       <!--FIVE SECTION ( CUSTOMERS)-->
 
-      <section>
-        <div>
+      <section class="section-customers">
+        <div class="container">
           <h2 class="subtitle">Customers</h2>
           <ul class="list-customers">
             <li class="icons-list">
-              <svg class="icons-list">
-                <!--icon yago-->
-                <use href="./images/icons.svg#icon-YAGO"></use>
-              </svg>
+              <a class="link-customers-five-section">
+                <svg width="104" height="56" class="icons-list">
+                  <!--icon yago-->
+                  <use href="./images/icons.svg#icon-YAGO"></use>
+                </svg>
+              </a>
             </li>
             <li class="icons-list">
-              <svg class="icons-list">
-                <!--company tagline here-->
-                <use href="./images/icons.svg#icon-Logo-1"></use>
-              </svg>
+              <a class="link-customers-five-section">
+                <svg width="104" height="56" class="icons-list">
+                  <!--company tagline here-->
+                  <use href="./images/icons.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="icons-list">
-              <svg class="icons-list">
-                <use href="./images/icons.svg#icon-COMPANY"></use>
-              </svg>
+              <a class="link-customers-five-section">
+                <svg width="104" height="56" class="icons-list">
+                  <use href="./images/icons.svg#icon-COMPANY"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="icons-list">
+              <a class="link-customers-five-section">
+                <svg width="104" height="56" class="icons-list">
+                  <use href="./images/icons.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
             </li>
             <li class="icons-list">
-              <svg class="icons-list">
-                <use href="./images/icons.svg#icon-Logo-3"></use>
-              </svg>
+              <a class="link-customers-five-section">
+                <svg width="104" height="56" class="icons-list">
+                  <use href="./images/icons.svg#icon-BRAND"></use>
+                </svg>
+              </a>
             </li>
+
             <li class="icons-list">
-              <svg class="icons-list">
-                <use href="./images/icons.svg#icon-BRAND"></use>
-              </svg>
-            </li>
-            <li class="icons-list">
-              <svg class="icons-list">
-                <use href="./images/icons.svg#icon-Logo-4"></use>
-              </svg>
+              <a class="link-customers-five-section">
+                <svg width="104" height="56" class="icons-list">
+                  <use href="./images/icons.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
