--- a/index.html
+++ b/index.html
@@ -199,28 +199,28 @@
                 <ul class="forth-social-media">
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -236,28 +236,28 @@
                 <ul class="forth-social-media">
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -278,28 +278,28 @@
                 <ul class="forth-social-media">
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -320,28 +320,28 @@
                 <ul class="forth-social-media">
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="64" height="64">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -421,6 +421,40 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+
+      <div class="footer-socials">
+        <p class="p-social-media">Social Media</p>
+        <ul class="footer-list">
+          <li class="listaa">
+            <a class="link-footer">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="listaa">
+            <a class="link-footer">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="listaa">
+            <a class="link-footer">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="listaa">
+            <a class="link-footer">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
