--- a/index.html
+++ b/index.html
@@ -414,47 +414,49 @@
 
     <footer class="footer-class">
       <div class="container-footer">
-        <a href="./index.html" class="logo-footer"
-          >Web<span class="span-footer">Studio</span></a
-        >
-        <p class="logo-footer-link">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+        <div class="logo-and-paragraph">
+          <a href="./index.html" class="logo-footer"
+            >Web<span class="span-footer">Studio</span></a
+          >
+          <p class="logo-footer-link">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
 
-      <div class="footer-socials">
-        <p class="p-social-media">Social Media</p>
-        <ul class="footer-list">
-          <li class="listaa">
-            <a class="link-footer">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="listaa">
-            <a class="link-footer">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="listaa">
-            <a class="link-footer">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="listaa">
-            <a class="link-footer">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="footer-socials">
+          <p class="p-social-media">Social Media</p>
+          <ul class="footer-list">
+            <li class="listaa">
+              <a class="link-footer">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="listaa">
+              <a class="link-footer">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="listaa">
+              <a class="link-footer">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="listaa">
+              <a class="link-footer">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
