--- a/index.html
+++ b/index.html
@@ -46,41 +46,39 @@
   <body>
     <!--Hero Section-->
 
-    <header class="header">
-      <div class="cls container">
-        <nav class="nav-header">
-          <a href="./index.html" class="logo link"
-            >Web<span class="span-header">Studio</span></a
-          >
-          <ul class="list nav-meniu">
-            <li class="item">
-              <a href="./index.html" class="logo-list link">Studio</a>
+    <header class="header-container">
+      <div class="header-section-container">
+        <nav class="navigation-container">
+          <a href="./index.html" class="logo-link link"
+            >Web<span class="logo-info">Studio</span>
+          </a>
+          <ul class="list">
+            <li>
+              <a class="list-link link" href="./index2.html">Studio</a>
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="logo-list link">Portfolio</a>
+            <li>
+              <a class="list-link link" href="./portfolio.html">Portfolio</a>
             </li>
-
-            <li class="item">
-              <a href="" class="logo-list link">Contacts</a>
+            <li>
+              <a class="list-link link" href="">Contacts</a>
             </li>
           </ul>
+
+          <address class="address-container">
+            <ul class="list">
+              <li>
+                <a href="mailto:info@devstudio.com" class="address-link link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+110001111111" class="address-link link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
         </nav>
-        <!--Contact Information-->
-
-        <address>
-          <ul class="list-address">
-            <li class="email-one">
-              <a href="mailto:info@devstudio.com" class="email link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="email-two">
-              <a href="tel:+110001111111" class="email link">
-                +11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
       </div>
     </header>
 
@@ -425,7 +423,7 @@
         </div>
 
         <div class="footer-socials">
-          <p class="p-social-media">Social Media</p>
+          <p class="p-social-media">Social media</p>
           <ul class="footer-list">
             <li class="listaa">
               <a class="link-footer">
