--- a/index.html
+++ b/index.html
@@ -197,28 +197,28 @@
                 <ul class="forth-social-media">
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="16" height="16">
+                      <svg class="our-team-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="16" height="16">
+                      <svg class="our-team-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="16" height="16">
+                      <svg class="our-team-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="forth-icons">
                     <a href="" class="link-icons">
-                      <svg width="16" height="16">
+                      <svg class="our-team-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -427,28 +427,28 @@
           <ul class="footer-list">
             <li class="listaa">
               <a class="link-footer">
-                <svg width="24" height="24">
+                <svg class="last-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="listaa">
               <a class="link-footer">
-                <svg width="24" height="24">
+                <svg class="last-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="listaa">
               <a class="link-footer">
-                <svg width="24" height="24">
+                <svg class="last-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="listaa">
               <a class="link-footer">
-                <svg width="24" height="24">
+                <svg clas="last-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
